<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffd9beff"
                tools:context="com.vik.babiesdayschedule.fragments.AddActivityFragment">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top_margin"
        android:theme="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:id="@+id/from"
        android:layout_alignBottom="@+id/btn_edit_from_2"
        android:layout_toStartOf="@+id/spinner"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/from_time"
        android:layout_alignTop="@+id/from"
        android:layout_toEndOf="@+id/from"
        android:layout_toStartOf="@+id/btn_edit_from_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/to"
        android:layout_alignBottom="@+id/btn_edit_to_2"
        android:layout_toStartOf="@+id/spinner"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/to_time"
        android:layout_alignTop="@+id/to"
        android:layout_alignStart="@+id/from_time"
        android:layout_toStartOf="@+id/btn_edit_to_2"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select time"
        android:id="@+id/btn_edit_from_2"
        android:layout_below="@+id/spinner"
        android:layout_alignParentEnd="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select time"
        android:id="@+id/btn_edit_to_2"
        android:layout_below="@+id/btn_edit_from_2"
        android:layout_alignParentEnd="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btn_edit_to_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/duration_2"
        android:layout_below="@+id/to_time"
        android:layout_toStartOf="@+id/to_time"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btn_save"/>
</RelativeLayout>
